fix spacing intro

--- a/src/home/Splash.css
+++ b/src/home/Splash.css
@@ -16,10 +16,11 @@
 }
 
 .intro {
+    margin-top: -1.5vh;
     text-align: left;
     width: 100vw;
     color: var(--primary-text);
-    padding: 0 0 100vh calc(2.2rem + .8%);
+    padding: 0 0 100vh calc(2.2rem + .89%);
     line-height: 1;
 }
 
